; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_declarator_tail.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_declarator_tail.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32*)* @read_declarator_tail to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_declarator_tail(i32* %0, i32* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = call i64 @next_token(i8 signext 91)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %2
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @read_declarator_array(i32* %9)
  store i32* %10, i32** %3, align 8
  br label %20

11:                                               ; preds = %2
  %12 = call i64 @next_token(i8 signext 40)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %11
  %15 = load i32*, i32** %4, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32* @read_declarator_func(i32* %15, i32* %16)
  store i32* %17, i32** %3, align 8
  br label %20

18:                                               ; preds = %11
  %19 = load i32*, i32** %4, align 8
  store i32* %19, i32** %3, align 8
  br label %20

20:                                               ; preds = %18, %14, %8
  %21 = load i32*, i32** %3, align 8
  ret i32* %21
}

declare dso_local i64 @next_token(i8 signext) #1

declare dso_local i32* @read_declarator_array(i32*) #1

declare dso_local i32* @read_declarator_func(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
